--- a/fitnessApp/index.html
+++ b/fitnessApp/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="UTF-8" />
+    <!-- Responsive Meta Tag -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>SoftLand Bootstrap Template</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
