--- a/fitnessApp/index.html
+++ b/fitnessApp/index.html
@@ -36,7 +36,17 @@
   <link href="css/btt.css" rel="stylesheet">
 	
 	<style>
-
+*{
+	margin: 0;
+	padding: 0;
+  -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    box-sizing:border-box;
+       letter-spacing: 1px;
+}
+body {
+	overflow-x: hidden ! important
+		}
 .align-center {
     text-align: center;
 }
