--- a/fitnessApp/index.html
+++ b/fitnessApp/index.html
@@ -2,18 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <!-- Responsive Meta Tag -->
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>SoftLand Bootstrap Template</title>
+  <meta charset="utf-8">
+  <title>Example of an App website </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="img/med-bekk.jpg" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -25,28 +21,15 @@
   <!-- Bootstrap CSS File -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="vendor/line-awesome/css/line-awesome.min.css" rel="stylesheet">
-  <link href="vendor/aos/aos.css" rel="stylesheet">
-  <link href="vendor/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+ 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/alchemyjs/0.4.2/alchemy-white.min.css" integrity="sha256-4po1HJjqBD1VLB0BbqIbPboyP34wQeNMVmwTPYli+94=" crossorigin="anonymous" />
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/alchemyjs/0.4.2/alchemy.min.css" integrity="sha256-koFtouao5ekLtFkLtLwvwH9xIipzRFJdEI77JdcGlJA=" crossorigin="anonymous" />
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
   <link href="css/btt.css" rel="stylesheet">
 	
 	<style>
-*{
-	margin: 0;
-	padding: 0;
-  -webkit-box-sizing:border-box;
-    -moz-box-sizing:border-box;
-    box-sizing:border-box;
-       letter-spacing: 1px;
-}
-body {
-	overflow-x: hidden ! important
-		}
+		
 .align-center {
     text-align: center;
 }
@@ -213,7 +196,6 @@ label {
 	margin-right:8%;
 	margin-top: 70px;
 	padding: 20px ! important;
-	background: #f7f7f7;
 	border-radius: 5px
   }
 }
@@ -231,6 +213,12 @@ margin-left: 0.7rem !important;
 	
 	</style>
 
+  <!-- =======================================================
+    Template Name: SoftLand
+    Template URL: https://bootstrapmade.com/softland-bootstrap-app-landing-page-template/
+    Author: BootstrapMade.com
+    Author URL: https://bootstrapmade.com/
+  ======================================================= -->
 </head>
 
 <body>
@@ -604,14 +592,12 @@ margin-left: 0.7rem !important;
     </footer>
   </div> <!-- .site-wrap -->
 
-  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <a href="#" class="back-to-top"><i class="fas fa-angle-up"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/jquery/jquery-migrate.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="vendor/easing/easing.min.js"></script>
-<!--  <script src="vendor/php-email-form/validate.js"></script>-->
+
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/alchemyjs/0.4.2/scripts/vendor.js" integrity="sha256-I5k1ha+uDLZyOU/QFkuc/YRfx6ZKdQyXB5xrZ6a3kkQ=" crossorigin="anonymous"></script>
+
   <script src="vendor/sticky/sticky.js"></script>
   <script src="vendor/aos/aos.js"></script>
   <script src="vendor/owlcarousel/owl.carousel.min.js"></script>
