--- a/fitnessApp/index.html
+++ b/fitnessApp/index.html
@@ -194,7 +194,7 @@ label {
     width: 84%;
 	margin-left: 8%;
 	margin-right:8%;
-	margin-top: 70px;
+	margin-top: 85px;
 	padding: 20px ! important;
 	border-radius: 5px
   }
@@ -213,12 +213,6 @@ margin-left: 0.7rem !important;
 	
 	</style>
 
-  <!-- =======================================================
-    Template Name: SoftLand
-    Template URL: https://bootstrapmade.com/softland-bootstrap-app-landing-page-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com/
-  ======================================================= -->
 </head>
 
 <body>
@@ -250,7 +244,7 @@ margin-left: 0.7rem !important;
                 <li><a href="#Pricing" class="nav-link">الأسعار</a></li>
 
                 <li>
-                  <a href="blog.html" class="nav-link">المدونة</a>
+                  <a href="#" class="nav-link">المدونة</a>
                 </li>
                 <li><a href="#Contact" class="nav-link">اتصل</a></li>
               </ul>
